add factory - details-companies-bugs

--- a/src/app/core/navbar/navbar.component.html
+++ b/src/app/core/navbar/navbar.component.html
@@ -10,7 +10,7 @@
       <li class="nav-tab " routerLinkActive="active"><a routerLink="/Factories">{{'IndustrialDepartments' | translate}}</a>
           <!-- <span class="icon-Icon-arrow rotate-down white-colored-txt drop-down-arrow"></span> -->
       </li>
-      <li class="nav-tab " routerLinkActive="active"><a routerLink="/FactoryDetails">{{'sponsors' | translate}}</a></li>
+      <!-- <li class="nav-tab " routerLinkActive="active"><a routerLink="/FactoryDetails">{{'sponsors' | translate}}</a></li> -->
       <li class="nav-tab " routerLinkActive="active"><a routerLink="/AddFactory">{{'AddFactory' | translate}}</a></li>
       <li class="nav-tab " routerLinkActive="active"><a routerLink="/ContactUs">{{'ContactUs' | translate}}</a></li>
   </ul>
@@ -34,9 +34,9 @@
             <li class="nav-item">
               <a class="nav-link " routerLink="/Factories">{{'IndustrialDepartments' | translate}}</a>
             </li>
-            <li class="nav-item">
+            <!-- <li class="nav-item">
               <a class="nav-link " routerLink="/FactoryDetails">{{'sponsors' | translate}}</a>
-            </li>
+            </li> -->
             <li class="nav-item">
               <a class="nav-link " routerLink="/AddFactory">{{'AddFactory' | translate}}</a>
             </li>
