--- a/src/assets/css/style-rtl.css
+++ b/src/assets/css/style-rtl.css
@@ -7138,16 +7138,17 @@ height: 100%;
       line-height: 1.5rem;
       font-family: "NeoSansArabic"; }
     .search-result-card--sm .search-card-contacts-list {
+      padding-right:0;
       display: flex;
       margin: 0; }
     .search-result-card--sm .search-card-contact {
-      font-size: .75rem;
+      font-size: .7rem;
       font-family: "NeoSansArabic";
       line-height: 0.938rem;
-      margin-left: .4rem; }
+      margin-left: .1rem; }
       .search-result-card--sm .search-card-contact:before {
         content: ' |';
-        font-size: .75rem;
+        font-size: .7rem;
         font-family: "NeoSansArabic";
         line-height: 0.938rem; }
       .search-result-card--sm .search-card-contact:first-child::before {
@@ -8253,3 +8254,8 @@ footer {
     width: 107vw; }
   .page-banner__header {
     font-size: 2.5rem; } }
+iframe {
+    WIDTH: 100%;
+    HEIGHT: 34VW;
+}
+
